--- a/ttt/ttt.ui
+++ b/ttt/ttt.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>915</width>
-    <height>602</height>
+    <width>923</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,13 +33,13 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>20</y>
+     <y>10</y>
      <width>881</width>
      <height>531</height>
     </rect>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="task">
     <attribute name="title">
@@ -70,6 +70,9 @@
        <height>211</height>
       </rect>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgba(255, 255, 255, 100);</string>
+     </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit">
      <property name="geometry">
@@ -79,6 +82,9 @@
        <width>241</width>
        <height>21</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgba(255, 255, 255, 100);</string>
      </property>
      <property name="inputMask">
       <string/>
@@ -102,7 +108,7 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>50</x>
        <y>60</y>
        <width>81</width>
        <height>31</height>
@@ -116,6 +122,9 @@
        <italic>true</italic>
        <bold>true</bold>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>Task</string>
@@ -143,16 +152,16 @@
      <property name="geometry">
       <rect>
        <x>30</x>
-       <y>20</y>
+       <y>10</y>
        <width>831</width>
-       <height>461</height>
+       <height>481</height>
       </rect>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="test.qrc">:/newPrefix/Pictures/Screenshot from 2024-03-07 23-29-27.png</pixmap>
+      <pixmap resource="test.qrc">:/newPrefix/Pictures/Screenshot from 2024-03-08 16-18-32.png</pixmap>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_2">
@@ -164,6 +173,9 @@
        <height>21</height>
       </rect>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgba(255, 255, 255, 100);</string>
+     </property>
     </widget>
     <widget class="QListWidget" name="listWidget_2">
      <property name="geometry">
@@ -173,6 +185,9 @@
        <width>141</width>
        <height>231</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgba(255, 255, 255, 100);</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_4">
@@ -206,6 +221,12 @@
        <height>231</height>
       </rect>
      </property>
+     <property name="focusPolicy">
+      <enum>Qt::WheelFocus</enum>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgba(255, 255, 255, 100);</string>
+     </property>
     </widget>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
@@ -227,6 +248,84 @@
      </property>
      <property name="text">
       <string>To be Visited</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_7">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>60</y>
+       <width>111</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Ubuntu</family>
+       <pointsize>26</pointsize>
+       <weight>75</weight>
+       <italic>true</italic>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Travel</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="Reminders">
+    <attribute name="title">
+     <string>Reminders</string>
+    </attribute>
+    <widget class="QLabel" name="label_6">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>10</y>
+       <width>841</width>
+       <height>481</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="test.qrc">:/newPrefix/Pictures/Screenshot from 2024-03-08 17-15-52.png</pixmap>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>50</y>
+       <width>181</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Ubuntu</family>
+       <pointsize>26</pointsize>
+       <weight>75</weight>
+       <italic>true</italic>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Remainder</string>
+     </property>
+    </widget>
+    <widget class="QCalendarWidget" name="calendarWidget">
+     <property name="geometry">
+      <rect>
+       <x>580</x>
+       <y>40</y>
+       <width>272</width>
+       <height>156</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
      </property>
     </widget>
    </widget>
