--- a/ttt/ttt.ui
+++ b/ttt/ttt.ui
@@ -110,7 +110,7 @@
       <rect>
        <x>50</x>
        <y>60</y>
-       <width>81</width>
+       <width>161</width>
        <height>31</height>
       </rect>
      </property>
@@ -255,7 +255,7 @@
       <rect>
        <x>50</x>
        <y>60</y>
-       <width>111</width>
+       <width>161</width>
        <height>31</height>
       </rect>
      </property>
@@ -297,9 +297,9 @@
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>50</y>
-       <width>181</width>
-       <height>41</height>
+       <y>55</y>
+       <width>173</width>
+       <height>40</height>
       </rect>
      </property>
      <property name="font">
@@ -312,16 +312,16 @@
       </font>
      </property>
      <property name="text">
-      <string>Remainder</string>
+      <string>Reminders</string>
      </property>
     </widget>
     <widget class="QCalendarWidget" name="calendarWidget">
      <property name="geometry">
       <rect>
-       <x>580</x>
-       <y>40</y>
-       <width>272</width>
-       <height>156</height>
+       <x>470</x>
+       <y>30</y>
+       <width>371</width>
+       <height>211</height>
       </rect>
      </property>
      <property name="styleSheet">
