--- a/ttt/ttt.ui
+++ b/ttt/ttt.ui
@@ -324,6 +324,19 @@
       <string>Time</string>
      </property>
     </widget>
+    <widget class="QPushButton" name="pushButton">
+     <property name="geometry">
+      <rect>
+       <x>410</x>
+       <y>430</y>
+       <width>80</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>PushButton</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="Reminders">
     <attribute name="title">
